--- a/src/app/alumni/tracing-alumni/tracing-alumni.component.html
+++ b/src/app/alumni/tracing-alumni/tracing-alumni.component.html
@@ -1,3 +1,16 @@
-<p>
-  tracing-alumni works!
-</p>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing"></a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p></p>
+        </div>
+      </div>
+    </div>
+
+</div>
