--- a/src/app/hospitality/call-center/call-center.component.html
+++ b/src/app/hospitality/call-center/call-center.component.html
@@ -1,3 +1,40 @@
-<ol>
-	<li>Q : Call Center Udinus?</li>A :	024.3517261?<br><br><li>Q :	Jika ingin menghubungi biro umum, berapa nomor yang harus dihubungi?</li>A : (024)3569684.<br><br><li>Q : Apakah orangtua mahasiswa bisa menghubungi call senter?</li>A : Bisa.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Call Center Udinus?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>024.3517261</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Jika ingin menghubungi biro umum, berapa nomor yang harus dihubungi?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>(024)3569684.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Apakah orangtua mahasiswa bisa menghubungi call senter?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Bisa.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
