--- a/src/app/hospitality/sms-center/sms-center.component.html
+++ b/src/app/hospitality/sms-center/sms-center.component.html
@@ -1,3 +1,52 @@
-<ol>
-	<li>Q : Apakah orangtua mahasiswa juga bisa mengakses SMS Senter?</li>A : Bisa, di nomor 081325634567.<br><br><li>Q : Jika nomor yang digunakan mahasiswa untuk sms itu baru , Apakah harus mendaftarkan kembali?</li>A	: Tidak.<br><br><li>Q : Apa manfaat SMS Senter untuk mahasiswa?</li>A : Bisa menyampaikan keluhan, syarat dan kritik.
-</ol>	
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Apakah orangtua mahasiswa juga bisa mengakses SMS Senter?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>ke bagian tata usaha Udinus.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q: Bagaimana Mekanisme Reset Password atau dan Aktifasi Siadin melalui TU?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Bisa, di nomor 081325634567.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Jika nomor yang digunakan mahasiswa untuk sms itu baru , Apakah harus mendaftarkan kembali?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Tidak.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa manfaat SMS Senter untuk mahasiswa?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Bisa menyampaikan keluhan, syarat dan kritik.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
