--- a/src/app/kemahasiswaan/beasiswa/beasiswa.component.html
+++ b/src/app/kemahasiswaan/beasiswa/beasiswa.component.html
@@ -1,3 +1,52 @@
-<ol>
-	<li>Q : Dimana kita bisa mendapatkan informasi tentang beasiswa?</li>A : Informasi mengenai beasiswa bisa dilihat di http://bima.dinus.ac.id, Di papan pengumuman, Di Siadin Mahasiswa<br><br><li>Q : Apa saja persyaratan untuk mendapatkan beasiswa prestasi?</li>A : Sertifikat kejuaraan (tingkat lokal,nasional,internasional), Surat rekomendasi dari fakultas.<br><br><li>Q : Jenis-jenis beasiswa yang dikelola UDINUS?</li>A : Beasiswa PPA, Beasiswa BBM, Beasiswa Aktivis, Beasiswa BKM, Beasiswa Pemprov, Beasiswa Djarum, Beasiswa TPSDP, Beasiswa Supersemar, Beasiswa Dinar, Beasiswa Instusi Per Program Studi, Beasiswa Ungulan, Beasiswa Khusus, Beasiswa Prestasi, Beasiswa BRI.<br><br><li>Q : Apa syarat Utama mendaftar beasiswa?</li>A : FC.Kartu Mahasiswa (KTM)Yang masih berlaku, Nilai IPK minimal 2,75 dibuktikan dengan Transkip nilai yang dikeluarkan oleh Tata Usaha dari Fakultas.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Dimana kita bisa mendapatkan informasi tentang beasiswa?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Informasi mengenai beasiswa bisa dilihat di http://bima.dinus.ac.id, Di papan pengumuman, Di Siadin Mahasiswa</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa saja persyaratan untuk mendapatkan beasiswa prestasi?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Sertifikat kejuaraan (tingkat lokal,nasional,internasional), Surat rekomendasi dari fakultas.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Jenis-jenis beasiswa yang dikelola UDINUS?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Beasiswa PPA, Beasiswa BBM, Beasiswa Aktivis, Beasiswa BKM, Beasiswa Pemprov, Beasiswa Djarum, Beasiswa TPSDP, Beasiswa Supersemar, Beasiswa Dinar, Beasiswa Instusi Per Program Studi, Beasiswa Ungulan, Beasiswa Khusus, Beasiswa Prestasi, Beasiswa BRI.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa syarat Utama mendaftar beasiswa?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>FC.Kartu Mahasiswa (KTM)Yang masih berlaku, Nilai IPK minimal 2,75 dibuktikan dengan Transkip nilai yang dikeluarkan oleh Tata Usaha dari Fakultas.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
