--- a/src/app/kemahasiswaan/komunitas/komunitas.component.html
+++ b/src/app/kemahasiswaan/komunitas/komunitas.component.html
@@ -1,3 +1,16 @@
-<ol>
-	<li>Q : Komunitas apa saja yang ada di UDINUS?</li>A : Komunitas yang ada di Udinus antara lain : Doscom, Panser Udinus, berbagai UKM serta Himpunan Mahasiswa, dll.
-</ol>	
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Komunitas apa saja yang ada di UDINUS?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Komunitas yang ada di Udinus antara lain : Doscom, Panser Udinus, berbagai UKM serta Himpunan Mahasiswa, dll.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
