--- a/src/app/kemahasiswaan/mawapres/mawapres.component.html
+++ b/src/app/kemahasiswaan/mawapres/mawapres.component.html
@@ -1,3 +1,76 @@
-<ol>
-	<li>Q : Apa itu Mawapres?</li>A	: Mawapres adalah singkatan dari Mahasiswa Berprestasi, baik berprestasi di Akademik ataupun berprestasi dibidang organisasi serta kegiatan lain yang menunjang.<br><br><li>Q : Apa syarat mengikuti Mawapres?</li>A : Mahasiswa aktif min semester 5, Membuat karya tulis sesuai dengan tema yang akan diperlombakan, Mengumpulkan bukti sertifikat seluruh kegiatan yang diikuti, Mendaftarkan diri ke Fakultas masing-masing<br><br><li>Q : Kapan mulai pendaftaran Mawapres?</li>A : Sekitar bulan November.<br><br><li>Q : Dimana kita bisa mendapatkan informasi lebih lanjut tentang Mawapres?</li>A : Papan Pengumuman, Dapat dilihat di Facebook Bima (https://www.facebook.com/bimadinus?fref=ts), Dapat diliat dari web Bima di http://bima.dinus.ac.id/<br><br><li>Q : Apa manfaatnya mengikuti Mawapres?</li>A : Menumbuhkan rasa berkompetisi, mempunyai banyak teman, mempunyai pengalaman baru.<br><br><li>Q : Ada berapa tahap seleksi Mawapres?</li>A : Ada 6 yaitu Seleksi Administrasi oleh Fak. Seleksi Presentasi Fak. Yang dinyatakan Layak oleh Fak masing-masing, akan dikirim ke universitas untuk mengikuti lomba Mawapres Tingkat Univ. Jika masuk kedalam 3 Besar kandidat Mawapres Utama tingkat Univ, akan di seleksi lagi untuk mengetahui mana yang layak di kirim ke tingkat Kopertis. Di tingkat Kopertis, akan dipertandingkan oleh Univ lain. Jika masuk 3 besar tingkat Kopertis, akan dikirim ke Tingkat Nasional.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Apa itu Mawapres?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">Q : Apa itu Mawapres?
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Mawapres adalah singkatan dari Mahasiswa Berprestasi, baik berprestasi di Akademik ataupun berprestasi dibidang organisasi serta kegiatan lain yang menunjang.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa syarat mengikuti Mawapres?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Mahasiswa aktif min semester 5, Membuat karya tulis sesuai dengan tema yang akan diperlombakan, Mengumpulkan bukti sertifikat seluruh kegiatan yang diikuti, Mendaftarkan diri ke Fakultas masing-masing</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Kapan mulai pendaftaran Mawapres?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Sekitar bulan November.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Dimana kita bisa mendapatkan informasi lebih lanjut tentang Mawapres?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Papan Pengumuman, Dapat dilihat di Facebook Bima (https://www.facebook.com/bimadinus?fref=ts), Dapat diliat dari web Bima di http://bima.dinus.ac.id/</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question4">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa manfaatnya mengikuti Mawapres?</a></h4>
+  		</div>
+  		<div id="question4" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p> Menumbuhkan rasa berkompetisi, mempunyai banyak teman, mempunyai pengalaman baru.</p>
+  			</div>
+  		</div>
+  	</div>
+
+    <div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question5">
+  		 <h4 class="panel-title"><a class="ing">Q : Ada berapa tahap seleksi Mawapres?</a></h4>
+  		</div>
+  		<div id="question5" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Ada 6 yaitu Seleksi Administrasi oleh Fak. Seleksi Presentasi Fak. Yang dinyatakan Layak oleh Fak masing-masing, akan dikirim ke universitas untuk mengikuti lomba Mawapres Tingkat Univ. Jika masuk kedalam 3 Besar kandidat Mawapres Utama tingkat Univ, akan di seleksi lagi untuk mengetahui mana yang layak di kirim ke tingkat Kopertis. Di tingkat Kopertis, akan dipertandingkan oleh Univ lain. Jika masuk 3 besar tingkat Kopertis, akan dikirim ke Tingkat Nasional.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
