--- a/src/app/kemahasiswaan/organisasi-atau-himpunan-mahasiswa/organisasi-atau-himpunan-mahasiswa.component.html
+++ b/src/app/kemahasiswaan/organisasi-atau-himpunan-mahasiswa/organisasi-atau-himpunan-mahasiswa.component.html
@@ -1,3 +1,28 @@
-<ol>
-	<li>Q : Ada berapa Himpunan/organisasi di Udinus?</li>A : BEM (Badan Eksekutif Mahasiswa) tingkat Fak. ada 5, BEM U ( Badan Eksekutif Mahasiswa Universitas) ada 1, MPM ( Majelis Permusyawaratan Mahasiswa ) ada 1, DPM (Dewan Perwakilan Mahasiswa) Tingkat Fak. ada 5, DPM U ( Dewan Perwakilan Mahasiswa Universitas ) ada 1, Untuk Himpunan terdapat di setiap jurusan yang ada di bawah Fakultas<br><br><li>Q : Apa Manfaat masuk ke organisasi/himpunan?</li>A : Mendapat pengalaman tentang kerja tim, Pengalaman dibidang sosialisasi, Pengalaman dibidang lobbying dan masih banyak lagi.
-</ol>	
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Ada berapa Himpunan/organisasi di Udinus?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>BEM (Badan Eksekutif Mahasiswa) tingkat Fak. ada 5, BEM U ( Badan Eksekutif Mahasiswa Universitas) ada 1, MPM ( Majelis Permusyawaratan Mahasiswa ) ada 1, DPM (Dewan Perwakilan Mahasiswa) Tingkat Fak. ada 5, DPM U ( Dewan Perwakilan Mahasiswa Universitas ) ada 1, Untuk Himpunan terdapat di setiap jurusan yang ada di bawah Fakultas</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa Manfaat masuk ke organisasi/himpunan?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Mendapat pengalaman tentang kerja tim, Pengalaman dibidang sosialisasi, Pengalaman dibidang lobbying dan masih banyak lagi.</p>
+  			</div>
+  		</div>
+    </div>
+  </div>
+</div>
