--- a/src/app/kemahasiswaan/penelitian-atau-karya-ilmiah/penelitian-atau-karya-ilmiah.component.html
+++ b/src/app/kemahasiswaan/penelitian-atau-karya-ilmiah/penelitian-atau-karya-ilmiah.component.html
@@ -1,3 +1,52 @@
-<ol>
-	<li>Q : Ada berapa macam kegiatan peneliitian/karya ilmiah yang dapat diikut oleh mahasiswa UDINUS?</li>A : PKM (Program Kreatifitas Mahasiswa), Program Fasilitasi PemProv Jateng, Karya Ilmiah di Gemastik<br><br><li>Q : Apa itu PKM?</li>A : PKM adalah Program Kreatifitas Mahasiswa yang di selenggarakan oleh DIKTI. PKM ini terdiri dari 7 jenis yang dapat diikuti, yaitu : PKM-K (Program Kreatifitas Mahasiswa bagian Kewirausahaan), PKM-M (Program Kreatifitas Mahasiswa bagian Pengabdian Masyarakat), PKM-P (Program Kreatifitas Mahasiswa bagian Penelitian), PKM-T (Program Kreatifitas Mahasiswa bagian Teknologi), PKM-KC(Program Kreatifitas Mahasiswa bagian Karsa Cipta), PKM-AI (Program Kreatifitas Mahasiswa bagian Artikel Ilmiah), PKM-GT (Program Kreatifitas Mahasiswa bagian Gagasan Tertulis).<br><br><li> Q	: Apa itu Program Fasilitasi Pemprop Jateng?</li>A : Sebuah Program penelitian/ karyatulis Ilmiah yang dapat diikuti oleh mahasiswa se Jateng. Penyelenggara Program Fasilitasi ini adalah Pemprop Jateng, Dinas Pendidikan Kota Semarang. Ada beberapa Bidang yang dapat diikuti : RBTM(Rancang Bangun Teknologi), Kewirausahaan.<br><br><li>Q	: Dimana kita bisa mendapatkan informasi tentang penelitian/ karya Ilmiah?</li>A : Papan Pengumuman, Dapat dilihat di Facebook Bima (https://www.facebook.com/bimadinus?fref=ts).
-</ol>	
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Ada berapa macam kegiatan peneliitian/karya ilmiah yang dapat diikut oleh mahasiswa UDINUS?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>PKM (Program Kreatifitas Mahasiswa), Program Fasilitasi PemProv Jateng, Karya Ilmiah di Gemastik.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa itu PKM?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>PKM adalah Program Kreatifitas Mahasiswa yang di selenggarakan oleh DIKTI. PKM ini terdiri dari 7 jenis yang dapat diikuti, yaitu : PKM-K (Program Kreatifitas Mahasiswa bagian Kewirausahaan), PKM-M (Program Kreatifitas Mahasiswa bagian Pengabdian Masyarakat), PKM-P (Program Kreatifitas Mahasiswa bagian Penelitian), PKM-T (Program Kreatifitas Mahasiswa bagian Teknologi), PKM-KC(Program Kreatifitas Mahasiswa bagian Karsa Cipta), PKM-AI (Program Kreatifitas Mahasiswa bagian Artikel Ilmiah), PKM-GT (Program Kreatifitas Mahasiswa bagian Gagasan Tertulis).</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa itu Program Fasilitasi Pemprop Jateng?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Sebuah Program penelitian/ karyatulis Ilmiah yang dapat diikuti oleh mahasiswa se Jateng. Penyelenggara Program Fasilitasi ini adalah Pemprop Jateng, Dinas Pendidikan Kota Semarang. Ada beberapa Bidang yang dapat diikuti : RBTM(Rancang Bangun Teknologi), Kewirausahaan.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Dimana kita bisa mendapatkan informasi tentang penelitian/ karya Ilmiah?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>apan Pengumuman, Dapat dilihat di Facebook Bima (https://www.facebook.com/bimadinus?fref=ts).</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
