--- a/src/app/kepegawaian/beban-kinerja-dosen/beban-kinerja-dosen.component.html
+++ b/src/app/kepegawaian/beban-kinerja-dosen/beban-kinerja-dosen.component.html
@@ -1,3 +1,52 @@
-<ol>
-	<li>Q : Apa yang dimaksud dengan beban kinerja dosen (BKD)?</li>A : Beban kinerja dosen adalah beban kerja yang diberikan kepada masing – masing dosen berupa jumlah sks untuk mengajar.<br><br><li>Q : Kapan beban kinerja dosen (BKD) digunakan?</li>A : <br><br><li>Q : Apa saja yang tertuang di Beban Kinerja Dosen (BKD)?</li>A : Setiap semester BKD diproses, adapun isinya adalah Beban mengajar (SKS masing masing matakuliah, SK mengajar) Jumlah Penelitian Jumlah Pengabdian Kegiatasn Keprofesoran (bagi yang profesor).<br><br><li>Q : Siapa saja yang mengesahkan Beban Kinerja Dosen dari masing masing dosen?</li>A : Rektor dan Ka.Prodi.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Apa yang dimaksud dengan beban kinerja dosen (BKD)?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Beban kinerja dosen adalah beban kerja yang diberikan kepada masing – masing dosen berupa jumlah sks untuk mengajar.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Kapan beban kinerja dosen (BKD) digunakan?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p></p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa saja yang tertuang di Beban Kinerja Dosen (BKD)?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Setiap semester BKD diproses, adapun isinya adalah Beban mengajar (SKS masing masing matakuliah, SK mengajar) Jumlah Penelitian Jumlah Pengabdian Kegiatasn Keprofesoran (bagi yang profesor).</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Siapa saja yang mengesahkan Beban Kinerja Dosen dari masing masing dosen?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Rektor dan Ka.Prodi.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
