--- a/src/app/kepegawaian/informasi-dosen/informasi-dosen.component.html
+++ b/src/app/kepegawaian/informasi-dosen/informasi-dosen.component.html
@@ -1,3 +1,16 @@
-<ol>
-	<li>Q : Dimana kita dapat mengakses informasi tentang Dosen di Udinus?</li>A : Informasi Dosen dapat diakses melalui website masing – masing fakultas pada menu Staff Dosen atau dengan Search people pada hompage Udinus.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Dimana kita dapat mengakses informasi tentang Dosen di Udinus?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Informasi Dosen dapat diakses melalui website masing – masing fakultas pada menu Staff Dosen atau dengan Search people pada hompage Udinus.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
