--- a/src/app/keuangan/rekening-pembayaran/rekening-pembayaran.component.html
+++ b/src/app/keuangan/rekening-pembayaran/rekening-pembayaran.component.html
@@ -1,3 +1,16 @@
-<ol>
-	<li>Q : Ke nomor rekening mana saja pembayaran kuliah dapat dilakukan?</li>A : Bank Jateng Cab. Udinus Semarang a/n Universitas Dian Nuswantoro No Rek: 1.099.00001.3, Bank Mandiri Cab.Candi Baru Semarang a/n Universitas Dian Nuswantoro No. Rek: 136.000.5359.200, Bank BCA Cab. Pemuda a/n Universitas Dian Nuswantoro No. Rek : 099.382056.5, Bank BRI Cab. Pandaran a/n Universitas Dian Nuswantoro No. Rek : 0325.01.00 1102.30.6
-</ol>	
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Ke nomor rekening mana saja pembayaran kuliah dapat dilakukan?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Bank Jateng Cab. Udinus Semarang a/n Universitas Dian Nuswantoro No Rek: 1.099.00001.3, Bank Mandiri Cab.Candi Baru Semarang a/n Universitas Dian Nuswantoro No. Rek: 136.000.5359.200, Bank BCA Cab. Pemuda a/n Universitas Dian Nuswantoro No. Rek : 099.382056.5, Bank BRI Cab. Pandaran a/n Universitas Dian Nuswantoro No. Rek : 0325.01.00 1102.30.6</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
