--- a/src/app/keuangan/status-pembayaran/status-pembayaran.component.html
+++ b/src/app/keuangan/status-pembayaran/status-pembayaran.component.html
@@ -1,3 +1,64 @@
-<ol>
-	<li>Q : Dimana saya bisa melihat status pembayaran?</li>A : Di Siadin Mahasiswa.<br><br><li>Q : Apakah ada keringanan biaya uang gedung untuk jalur PMDK?</li>A : Ada, sebesar 25%.<br><br><li>Q : Apa syarat untuk membayar wisuda?</li>A : Sudah masuk di data yudisium.<br><br><li>Q	: Bagaimana jika mahasiswa sudah membayar uang SPP, tetapi di dalam data tidak terdaftar?</li>A	: Konfirmasi ke BIRO Keuangan.<br><br><li>Q	: Bagaimana jika mahasiswa ingin mengetahui informasi pembayaran uang gedung?</li>A	: Menghubungi biro keuangan, atau akses admisi dinus.ac.id/pmbonline
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Dimana saya bisa melihat status pembayaran?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Di Siadin Mahasiswa.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Apakah ada keringanan biaya uang gedung untuk jalur PMDK?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Ada, sebesar 25%.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa syarat untuk membayar wisuda?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Sudah masuk di data yudisium.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Bagaimana jika mahasiswa sudah membayar uang SPP, tetapi di dalam data tidak terdaftar?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Konfirmasi ke BIRO Keuangan.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question4">
+  		 <h4 class="panel-title"><a class="ing">Q : Bagaimana jika mahasiswa ingin mengetahui informasi pembayaran uang gedung?</a></h4>
+  		</div>
+  		<div id="question4" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Menghubungi biro keuangan, atau akses admisi dinus.ac.id/pmbonline</p>
+  			</div>
+  		</div>
+    </div>
+  </div>
+</div>
