--- a/src/app/layanan-poliklinik/layanan-poliklinik/layanan-poliklinik.component.html
+++ b/src/app/layanan-poliklinik/layanan-poliklinik/layanan-poliklinik.component.html
@@ -1,3 +1,40 @@
-<ol>
-	<li>Q : Jika saya pergi berobat ke poliklinik Udinus, perlukah saya membayar untuk pelayanan & obatnya?</li>A : Tidak, cukup membawa KTM saja.<br><br><li>Q	: Ada berapa jenis poli yang ada di poliklinik Udinus?</li>A : Poli Umum dan Poli Gigi serta Poli Psikologi.<br><br><li>Q : Sebagai mahasiswa, Syarat apa yang wajib dijadikan standar pelayanan di Poliklinik Udinus?</li>A : Harus berstatus Aktif dan membawa KTM pada saat berkunjung ke Poliklinik.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Jika saya pergi berobat ke poliklinik Udinus, perlukah saya membayar untuk pelayanan & obatnya?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Tidak, cukup membawa KTM saja.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Ada berapa jenis poli yang ada di poliklinik Udinus?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Poli Umum dan Poli Gigi serta Poli Psikologi.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Sebagai mahasiswa, Syarat apa yang wajib dijadikan standar pelayanan di Poliklinik Udinus?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Harus berstatus Aktif dan membawa KTM pada saat berkunjung ke Poliklinik.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
