--- a/src/app/parkir/tempat-parkir/tempat-parkir.component.html
+++ b/src/app/parkir/tempat-parkir/tempat-parkir.component.html
@@ -1,3 +1,19 @@
 <ol>
-	<li>Q : Dimana parkir mobil udinus?</li>A : Untuk semantara ini, area parkir adalah di Depan gedung B (untuk kendaraan dosen dan staff), Depan gedung E (untuk mobil dan karyawan TVku) dan sebagian untuk kendaraan mahasiswa, Depan gedung G (untuk mobil), Belakang gedung G (untuk motor), Depa
+	<li></li>A : 
 </ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Dimana parkir mobil udinus?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Untuk semantara ini, area parkir adalah di Depan gedung B (untuk kendaraan dosen dan staff), Depan gedung E (untuk mobil dan karyawan TVku) dan sebagian untuk kendaraan mahasiswa, Depan gedung G (untuk mobil), Belakang gedung G (untuk motor), Depa</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
