--- a/src/app/percetakan/lokasi-percetakan/lokasi-percetakan.component.html
+++ b/src/app/percetakan/lokasi-percetakan/lokasi-percetakan.component.html
@@ -1,3 +1,16 @@
-<ol>
-	<li>Q : Dimana saya harus mengambil modul?</li>A : Sebagian besar modul diambil di percetakan. lokasinya ada disebelah barat gedung B dan sebelah utara masjid baitull muttaqien.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Dimana saya harus mengambil modul?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Sebagian besar modul diambil di percetakan. lokasinya ada disebelah barat gedung B dan sebelah utara masjid baitull muttaqien.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
