--- a/src/app/percetakan/modul-kuliah/modul-kuliah.component.html
+++ b/src/app/percetakan/modul-kuliah/modul-kuliah.component.html
@@ -1,3 +1,28 @@
-<ol>
-	<li>Q : Dimana saya bisa mengambil modul kuliah?</li>A : Di percetakan Udinus.<br><br><li>Q	: Apakah wajib mendapatkan dan membayar modul, jika matakuliah yang bermodul tersebut statusnya U (ulang)?</li>A : Ya, Wajib. karena tidak ada yang menjamin bahwa modul yang didapatkan pada saat pertama kali mendapatkan modul / pertama kali kuliah mata kuliah tersebut, modulnya masih tersimpan.
-</ol>	
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Dimana saya bisa mengambil modul kuliah?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Di percetakan Udinus.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Apakah wajib mendapatkan dan membayar modul, jika matakuliah yang bermodul tersebut statusnya U (ulang)?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Ya, Wajib. karena tidak ada yang menjamin bahwa modul yang didapatkan pada saat pertama kali mendapatkan modul / pertama kali kuliah mata kuliah tersebut, modulnya masih tersimpan.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
