--- a/src/app/perpustakaan/buku-text/buku-text.component.html
+++ b/src/app/perpustakaan/buku-text/buku-text.component.html
@@ -1,3 +1,40 @@
-<ol>
-	<li>Q : Berapa jumlah maksimal buku yang bisa di pinjam di perpustakaan Udinus?</li>A : Maksimal satu buku.<br><br><li>Q : Bagaimana jika buku yang saya pinjam, hilang?</li>A : Maka Anda harus mengganti dengan buku yang sama atau mengganti dengan sejumlah denda yang ada.<br><br><li>Q : Dimana saya bisa melihat hasil skripsi mahasiswa Udinus?</li>A : Di perpustakaan Udinus.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Berapa jumlah maksimal buku yang bisa di pinjam di perpustakaan Udinus?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Maksimal satu buku.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Bagaimana jika buku yang saya pinjam, hilang?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Maka Anda harus mengganti dengan buku yang sama atau mengganti dengan sejumlah denda yang ada.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Dimana saya bisa melihat hasil skripsi mahasiswa Udinus?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Di perpustakaan Udinus.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
