--- a/src/app/semester-pendek/absensi/absensi.component.html
+++ b/src/app/semester-pendek/absensi/absensi.component.html
@@ -1,3 +1,31 @@
 <ol>
-	<li>Q : Bagaimana proses Absensi pada perkuliahan semester pendek?</li>A : Absensi dilakukan secara manual yakni dengan menandatangani daftar hadir saat perkuliahan berlangsung.<br><br><li>Q : Apa yang harus kita lakukan jika data absensi di SiAdin tidak sesuai?</li>A : Hubungi TU Fakultas.
+	<li></li>A : <br><br><li></li>A : 
 </ol>	
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Bagaimana proses Absensi pada perkuliahan semester pendek?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Absensi dilakukan secara manual yakni dengan menandatangani daftar hadir saat perkuliahan berlangsung.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa yang harus kita lakukan jika data absensi di SiAdin tidak sesuai?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Hubungi TU Fakultas.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
