--- a/src/app/semester-pendek/proses-krs/proses-krs.component.html
+++ b/src/app/semester-pendek/proses-krs/proses-krs.component.html
@@ -1,3 +1,64 @@
-<ol>
-	<li>Q : Bolehkah semester 3 mengikuti sp?</li>A : Boleh.<br><br><li>Q : Apa syarat dari mata kuliah yang bisa diambil di Semester Pendek?</li>A : Mata kuliah yang sudah pernah diambil sebelumnya di perkuliahan, minimal bernilai C, & peminat memenuhi kuota kelas.<br><br><li>Q	: Apakah mata kuliah yang BELUM pernah diambil, bisa di-SP?</li>A : Tidak, mata kuliah yang bisa di-SP adalah mata kuliah yang pernah diambil sebelumnya.<br><br><li>Q : Berapa total SKS atau mata kuliah yang bisa diambil sewaktu input KRS SP?</li>A : 10 SKS atau 4 mata kuliah.<br><br><li>Q : Dimana saya bisa melihat nama dosen wali saya?</li>A : Di siadin.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Bolehkah semester 3 mengikuti sp?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Boleh.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa syarat dari mata kuliah yang bisa diambil di Semester Pendek?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Mata kuliah yang sudah pernah diambil sebelumnya di perkuliahan, minimal bernilai C, & peminat memenuhi kuota kelas.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Apakah mata kuliah yang BELUM pernah diambil, bisa di-SP?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Tidak, mata kuliah yang bisa di-SP adalah mata kuliah yang pernah diambil sebelumnya.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Berapa total SKS atau mata kuliah yang bisa diambil sewaktu input KRS SP?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>10 SKS atau 4 mata kuliah.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question4">
+  		 <h4 class="panel-title"><a class="ing">Q : Dimana saya bisa melihat nama dosen wali saya?</a></h4>
+  		</div>
+  		<div id="question4" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Di siadin.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
