--- a/src/app/semester-reguler/pendaftaran-semester-pendek/pendaftaran-semester-pendek.component.html
+++ b/src/app/semester-reguler/pendaftaran-semester-pendek/pendaftaran-semester-pendek.component.html
@@ -1,3 +1,16 @@
-<ol>
-	<li>Q : Dimana saya dapat mendaftar Semester Pendek?</li>A : Pada SiAdin masing - masing, Tepatnya pada menu Akademik Mahasiswa.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Dimana saya dapat mendaftar Semester Reguler?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Pada SiAdin masing - masing, Tepatnya pada menu Akademik Mahasiswa.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
