--- a/src/app/semester-reguler/ujian-tengah-dan-akhir-semester/ujian-tengah-dan-akhir-semester.component.html
+++ b/src/app/semester-reguler/ujian-tengah-dan-akhir-semester/ujian-tengah-dan-akhir-semester.component.html
@@ -1,3 +1,76 @@
-<ol>
-	<li>Q : Kapan ujian tengah semester dan akhir semester di laksanakan?</li>A : UTS dilaksanakan saat tengah semester sedangkan UAS dilaksanan saat akhir semester.<br><br><li>Q : Apa saja syarat untuk mengikuti ujian tengah dan akhir semester?</li>A : Menyelesaikan administrasi keuangan dan Prosentase kehadiran minimal 75%.<br><br><li>Q : Dimana kita bisa mendapatkan kartu ujian?</li>A	: Di SiAdin, Tepatnya pada menu akademik mahasiswa.<br><br><li>	Q : Apa saja syarat-syarat pada saat proses ujian tengah dan akhir semester dimulai?</li>A : Membawa kartu ujian, KTM, memakai baju berkerah dan bersepatu.<br><br><li>Q : Apakah ada ujian susulan?</li>A : Ketersediaan ujian susulan sesuai dengan kebijakan masing - masing dosen.<br><br><li>Q	: Kapan Ujian Praktek dilaksanakan?</li>A : Waktu Ujian Praktek ditentukan oleh masing - masing dosen.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Kapan ujian tengah semester dan akhir semester di laksanakan?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>UTS dilaksanakan saat tengah semester sedangkan UAS dilaksanan saat akhir semester.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa saja syarat untuk mengikuti ujian tengah dan akhir semester?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Menyelesaikan administrasi keuangan dan Prosentase kehadiran minimal 75%.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Dimana kita bisa mendapatkan kartu ujian?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Di SiAdin, Tepatnya pada menu akademik mahasiswa.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Apa saja syarat-syarat pada saat proses ujian tengah dan akhir semester dimulai?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Membawa kartu ujian, KTM, memakai baju berkerah dan bersepatu.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question4">
+  		 <h4 class="panel-title"><a class="ing">Q : Apakah ada ujian susulan?</a></h4>
+  		</div>
+  		<div id="question4" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Ketersediaan ujian susulan sesuai dengan kebijakan masing - masing dosen.</p>
+  			</div>
+  		</div>
+  	</div>
+
+    <div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question5">
+  		 <h4 class="panel-title"><a class="ing">Q: Kapan Ujian Praktek dilaksanakan?</a></h4>
+  		</div>
+  		<div id="question5" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Waktu Ujian Praktek ditentukan oleh masing - masing dosen.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
