--- a/src/app/si-adin/layanan/layanan.component.html
+++ b/src/app/si-adin/layanan/layanan.component.html
@@ -1,3 +1,112 @@
-<ol>
-	<li>Q : Ada penawaran krs bentuk pdf?</li>A	: Ada, di account Siadin masing-masing.<br><br><li>Q : Jika ipk saya di Siadin tidak sesuai , apa yang harus saya lakukan?</li>A : Jika IPK dan IPS tidak sesuai dengan hitungan, kemungkinan sedang dalam perbaikan sampai masa krs berlangsung.<br><br><li>Q : Jika saya membayar lewat BCA, kemanakah saya mengirim bukti pembayarannya?</li>A : Jika melakukan pembayaran biaya kuliah selain lewat bank bpd jateng maka harus membawa bukti pembayaran ke biku di gedung G lantai 1.<br><br><li> Q	: Sudah bayar tapi tagihan keuangan belum terbayar?</li>A : Kemungkinan pembayaran anda belum di validasi oleh biku untukk mempercepat validasi silahkan membawa bukti pembayaran ke biku untuk segera di onlinekan.<br><br><li>Q : Jika remidi tetap bisa input sesuai jadwal per fakultas?</li>A : Bisa, tapi nilai yang tercantum di sistem adlah nilai yang anda dpatkan sebelum remidi.<br><br><li>Q : Apakah KHS itu adalah keharusan?</li>A : KHS adalah sebuah bukti cetak nilai hasil ujia nyang anda dapatkan.<br><br><li>Q : Apa yang terjadi jika saya mengikuti simulasi KRS?</li>A : Simulasi KRS yang anda lakukan tidak beerpengaruh apapun terhadap KRS anda secaral riil, namun jadwal yang di tawarkan sudah di tentukan tata usaha fakultas masing2.<br><br><li>Q : Jika saya tidak mengikuti kegiatan input KRS pada jadwal yang sudah ditentukan apa yang harus saya lakukan?</li>A : Anda dapat mengikuti kegiatan input krs di jadwal yang ditentukan untuk semua fakultas dan Progdi.<br><br><li>Q : Jika saya tidak mengikuti kegiatan input KRS pada jadwal yang sudah ditentukan apa yang harus saya lakukan?</li>A	: Ya, karena seetiap kali perpanjangan TA, harus menginput kembali walaupun semester lalu TA nya blm selesai.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Ada penawaran krs bentuk pdf?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Ada, di account Siadin masing-masing.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Jika ipk saya di Siadin tidak sesuai , apa yang harus saya lakukan?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Jika IPK dan IPS tidak sesuai dengan hitungan, kemungkinan sedang dalam perbaikan sampai masa krs berlangsung.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Jika saya membayar lewat BCA, kemanakah saya mengirim bukti pembayarannya?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Jika melakukan pembayaran biaya kuliah selain lewat bank bpd jateng maka harus membawa bukti pembayaran ke biku di gedung G lantai 1.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Sudah bayar tapi tagihan keuangan belum terbayar?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Kemungkinan pembayaran anda belum di validasi oleh biku untukk mempercepat validasi silahkan membawa bukti pembayaran ke biku untuk segera di onlinekan.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question4">
+  		 <h4 class="panel-title"><a class="ing">Q : Jika remidi tetap bisa input sesuai jadwal per fakultas?</a></h4>
+  		</div>
+  		<div id="question4" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Bisa, tapi nilai yang tercantum di sistem adlah nilai yang anda dpatkan sebelum remidi.</p>
+  			</div>
+  		</div>
+  	</div>
+
+    <div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question5">
+  		 <h4 class="panel-title"><a class="ing">Q : Apakah KHS itu adalah keharusan?</a></h4>
+  		</div>
+  		<div id="question5" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>KHS adalah sebuah bukti cetak nilai hasil ujia nyang anda dapatkan.</p>
+  			</div>
+  		</div>
+  	</div>
+
+    <div class="panel panel-default ">
+    	<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question6">
+    	 <h4 class="panel-title"><a class="ing">Q : Apa yang terjadi jika saya mengikuti simulasi KRS?</a></h4>
+    	</div>
+    	<div id="question6" class="panel-collapse collapse" style="height: 0px;">
+    		<div class="panel-body">
+    			<h5><span class="label label-primary">Answer</span></h5>
+    			<p>Simulasi KRS yang anda lakukan tidak beerpengaruh apapun terhadap KRS anda secaral riil, namun jadwal yang di tawarkan sudah di tentukan tata usaha fakultas masing2.</p>
+    		</div>
+    	</div>
+    </div>
+
+    <div class="panel panel-default ">
+    	<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question7">
+    	 <h4 class="panel-title"><a class="ing">Q : Jika saya tidak mengikuti kegiatan input KRS pada jadwal yang sudah ditentukan apa yang harus saya lakukan?</a></h4>
+    	</div>
+    	<div id="question7" class="panel-collapse collapse" style="height: 0px;">
+    		<div class="panel-body">
+    			<h5><span class="label label-primary">Answer</span></h5>
+    			<p>Anda dapat mengikuti kegiatan input krs di jadwal yang ditentukan untuk semua fakultas dan Progdi.</p>
+    		</div>
+    	</div>
+    </div>
+
+    <div class="panel panel-default ">
+    	<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question6">
+    	 <h4 class="panel-title"><a class="ing">Q : Jika saya tidak mengikuti kegiatan input KRS pada jadwal yang sudah ditentukan apa yang harus saya lakukan?</a></h4>
+    	</div>
+    	<div id="question6" class="panel-collapse collapse" style="height: 0px;">
+    		<div class="panel-body">
+    			<h5><span class="label label-primary">Answer</span></h5>
+    			<p>Ya, karena seetiap kali perpanjangan TA, harus menginput kembali walaupun semester lalu TA nya blm selesai.</p>
+    		</div>
+    	</div>
+    </div>
+  </div>
+</div>
