--- a/src/app/si-adin/login/login.component.html
+++ b/src/app/si-adin/login/login.component.html
@@ -1,6 +1,28 @@
-1. 	Q	:	Bagaimana cara mahasiswa login ke siAdin v2012?
-	A	:	Mahasiswa dapat login SiAdin v2012 dengan menggunakan email mahasiswa yang telah disediakan oleh PSI-Udinus.
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
 
-2. 	Q	:	Bagaimana format email mahasiswa yang digunakan untuk login SiAdin v2012?
-	A	:	Format email mahasiswa adalah nim@mhs.dinus.ac.id , tanpa titik dan huruf depan diganti dengan angkat (A = 1, B
-			= 2, C = 3, D = 4, E = 5). contohnya adalah : A11.2012.04012 --> 111201204012@mhs.dinus.ac.id
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Bagaimana cara mahasiswa login ke siAdin v2012?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Mahasiswa dapat login SiAdin v2012 dengan menggunakan email mahasiswa yang telah disediakan oleh PSI-Udinus.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q	:	Bagaimana format email mahasiswa yang digunakan untuk login SiAdin v2012?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Format email mahasiswa adalah nim@mhs.dinus.ac.id , tanpa titik dan huruf depan diganti dengan angkat (A = 1, B = 2, C = 3, D = 4, E = 5). contohnya adalah : A11.2012.04012 --> 111201204012@mhs.dinus.ac.id</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
