--- a/src/app/career-center/info-lowongan/info-lowongan.component.html
+++ b/src/app/career-center/info-lowongan/info-lowongan.component.html
@@ -1,3 +1,16 @@
-<ol>
-	<li>Q : Dimana saya bisa mendapatkan informasi lowongan pekerjaan?</li>A : Dapat membuka di website cc.dinus.ac.id
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Dimana saya bisa mendapatkan informasi lowongan pekerjaan?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Dapat membuka di website cc.dinus.ac.id</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
