--- a/src/app/kemahasiswaan/unit-kegiatan-mahasiswa/unit-kegiatan-mahasiswa.component.html
+++ b/src/app/kemahasiswaan/unit-kegiatan-mahasiswa/unit-kegiatan-mahasiswa.component.html
@@ -1,3 +1,28 @@
-<ol>
-	<li>Q : Ada berapa Unit Kegiatan Mahasiswa di UDINUS?</li>A	:	ada 18 UKM, yaitu : Dncc, Aldaka, Pkkmk, Pers Kampus, Pramuka, Bulu Tangkis, PMK, Teater, Musik, Menwa, Psm, Bai, Sepak Bola, Tae Kwon Do, Basket, Ksr, Penalaran, Karate.<br><br><li>Q	: Bagaimana cara untuk masuk ke Unit kegiatan Mahasiswa?</li>A : Bisa langsung menghubungi pihak UKM yang diinginkan. Karena setiap UKM akan membuka pendaftaran untuk mahasiswa yang ingin bergabung.
-</ol>	
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Ada berapa Unit Kegiatan Mahasiswa di UDINUS?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Ada 18 UKM, yaitu : Dncc, Aldaka, Pkkmk, Pers Kampus, Pramuka, Bulu Tangkis, PMK, Teater, Musik, Menwa, Psm, Bai, Sepak Bola, Tae Kwon Do, Basket, Ksr, Penalaran, Karate.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Bagaimana cara untuk masuk ke Unit kegiatan Mahasiswa?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Bisa langsung menghubungi pihak UKM yang diinginkan. Karena setiap UKM akan membuka pendaftaran untuk mahasiswa yang ingin bergabung.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
