--- a/src/app/keuangan/tagihan/tagihan.component.html
+++ b/src/app/keuangan/tagihan/tagihan.component.html
@@ -1,3 +1,103 @@
 <ol>
-	<li>Q : Dimana saya bisa melihat jumlah tagihan yang ada?</li>A : Di Siadin Mahasiswa, melalui surat tagihan yang sudah di kirim, atau melalui Biro Keuangan (BIKU).<br><br><li>Q : Berapa biaya per SKS?</li>A	: Rp 80.000,- Rp 90.000,- Rp. 100.000,- (Tergantung Angkatan masuk).<br><br><li>Q : Dimana mahasiswa bisa mengetahui tagihan SKS?</li>A	: Di SiAdin masing-masing, di menu akademik - informasi keuangan.<br><br><li>Q : Apakah struk tagihan bulanan di kirim ke rumah?</li>A : Iya<br><br><li>Q : Bagaimana jika saya terlambat untuk membayar SKS?</li>A	: Tidak boleh ikut ujian.<br><br><li>Q : Dimana saya bisa mengambil struk tagihan SPP?</li>A : Di Biro Keuangan.<br><br><li>Q : Jika ada mahasiswa yang cuti , apakah masih menanggung tagihan bulanan?</li>A : Tidak, hanya SPP saja.
+	<li></li>A : <br><br><li></li>A	: <br><br><li></li>A	: <br><br><li></li>A : <br><br><li></li>A	: <br><br><li>Q : Dimana saya bisa mengambil struk tagihan SPP?</li>A : Di Biro Keuangan.<br><br><li>Q : Jika ada mahasiswa yang cuti , apakah masih menanggung tagihan bulanan?</li>A : Tidak, hanya SPP saja.
 </ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Dimana saya bisa melihat jumlah tagihan yang ada?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Di Siadin Mahasiswa, melalui surat tagihan yang sudah di kirim, atau melalui Biro Keuangan (BIKU).</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Berapa biaya per SKS?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Rp 80.000,- Rp 90.000,- Rp. 100.000,- (Tergantung Angkatan masuk).</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question2">
+  		 <h4 class="panel-title"><a class="ing">Q : Dimana mahasiswa bisa mengetahui tagihan SKS?</a></h4>
+  		</div>
+  		<div id="question2" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Di SiAdin masing-masing, di menu akademik - informasi keuangan.</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
+  		 <h4 class="panel-title"><a class="ing">Q : Apakah struk tagihan bulanan di kirim ke rumah?</a></h4>
+  		</div>
+  		<div id="question3" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Iya</p>
+  			</div>
+  		</div>
+  	</div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question4">
+  		 <h4 class="panel-title"><a class="ing">Q : Bagaimana jika saya terlambat untuk membayar SKS?</a></h4>
+  		</div>
+  		<div id="question4" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Anda bisa ke TU Fakultas, PSI atau email ke psi.udinus@gmail.com, dengan menyiapkan data diri dan data orang tua secara lengkap. karena syarat aktifasi adalah melakukan cek dan update data.</p>
+  			</div>
+  		</div>
+  	</div>
+
+    <div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question5">
+  		 <h4 class="panel-title"><a class="ing">Q : Bagaimana merubah status akademik dari Mangkir berganti menjadi Aktif?</a></h4>
+  		</div>
+  		<div id="question5" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>Silakan mengajukan permohonan aktif dengan membuat surat permohonan ditujukan ke Wakil Rektor I dan akan diteruskan ke Biro Akademik (BIAK). Dan tidak boleh lupa WAJIB menyelesaikan administratif keuangan terlebih dahulu.</p>
+  			</div>
+  		</div>
+  	</div>
+
+    <div class="panel panel-default ">
+    	<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question6">
+    	 <h4 class="panel-title"><a class="ing">Q : Apa yang harus Saya lakukan apabila Saya lupa password SiAdin?</a></h4>
+    	</div>
+    	<div id="question6" class="panel-collapse collapse" style="height: 0px;">
+    		<div class="panel-body">
+    			<h5><span class="label label-primary">Answer</span></h5>
+    			<p>Anda bisa ke TU Fakultas, PSI atau email ke psi.udinus@gmail.com, dengan menyiapkan data diri dan data orang tua secara lengkap. karena syarat aktifasi adalah melakukan cek dan update data.</p>
+    		</div>
+    	</div>
+    </div>
+
+    <div class="panel panel-default ">
+    	<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question7">
+    	 <h4 class="panel-title"><a class="ing">Q : Apa yang harus Saya lakukan apabila Saya lupa password SiAdin?</a></h4>
+    	</div>
+    	<div id="question7" class="panel-collapse collapse" style="height: 0px;">
+    		<div class="panel-body">
+    			<h5><span class="label label-primary">Answer</span></h5>
+    			<p>Anda bisa ke TU Fakultas, PSI atau email ke psi.udinus@gmail.com, dengan menyiapkan data diri dan data orang tua secara lengkap. karena syarat aktifasi adalah melakukan cek dan update data.</p>
+    		</div>
+    	</div>
+    </div>
+  </div>
+</div>
