--- a/src/app/parkir/keluar-masuk/keluar-masuk.component.html
+++ b/src/app/parkir/keluar-masuk/keluar-masuk.component.html
@@ -1,3 +1,28 @@
-<ol>
-	<li>Q : Bagaimana jika pada saat keluar parkir tidak dapat menunjukkan STNK?</li>A : Anda harus mengisikan data diri dan kendaraan pada pos parkir dan meninggalkan KTM/KTP kemudian meminta tanda tangan satpam.<br><br><li>Q : Bagaimana cara mengambil kembali KTP/KTM yang ditahan saat tidak membawa STNK?</li>A : KTP/KTM dapat diambil dengan menunjukan STNK dari kendaraan tersebut.
-</ol>	
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Bagaimana jika pada saat keluar parkir tidak dapat menunjukkan STNK?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Anda harus mengisikan data diri dan kendaraan pada pos parkir dan meninggalkan KTM/KTP kemudian meminta tanda tangan satpam.</p>
+        </div>
+      </div>
+    </div>
+
+  	<div class="panel panel-default ">
+  		<div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question1">
+  		 <h4 class="panel-title"><a class="ing">Q : Bagaimana cara mengambil kembali KTP/KTM yang ditahan saat tidak membawa STNK?</a></h4>
+  		</div>
+  		<div id="question1" class="panel-collapse collapse" style="height: 0px;">
+  			<div class="panel-body">
+  				<h5><span class="label label-primary">Answer</span></h5>
+  				<p>KTP/KTM dapat diambil dengan menunjukan STNK dari kendaraan tersebut.</p>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+</div>
