--- a/src/app/perpustakaan/letak-perpustakaan/letak-perpustakaan.component.html
+++ b/src/app/perpustakaan/letak-perpustakaan/letak-perpustakaan.component.html
@@ -1,3 +1,16 @@
-<ol>
-	<li>Q : Dimana letak perpustakaan Universitas Dian Nuswantoro?</li>A : Perpustakaan terletak di Gedung A lantai 2, tangga menuju perpustakaan ada di dekat Biro Akademik (BIAK).
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Dimana letak perpustakaan Universitas Dian Nuswantoro?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Perpustakaan terletak di Gedung A lantai 2, tangga menuju perpustakaan ada di dekat Biro Akademik (BIAK).</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
