--- a/src/app/perpustakaan/prosedur-pinjam/prosedur-pinjam.component.html
+++ b/src/app/perpustakaan/prosedur-pinjam/prosedur-pinjam.component.html
@@ -1,3 +1,16 @@
-<ol>
-	<li>Q : Bagaimana proses pengenbalian buku di perpustakaan?</li>A : Menyerahkan buku dan kartu anggota kepada petugas untuk menghapus data peminjaman di sistem.
-</ol>
+<div class="container ">
+  <div class="panel-group" id="faqAccordion">
+
+  	<div class="panel panel-default ">
+      <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
+       <h4 class="panel-title"><a class="ing">Q : Bagaimana proses pengenbalian buku di perpustakaan?</a></h4>
+      </div>
+      <div id="question0" class="panel-collapse collapse" style="height: 0px;">
+        <div class="panel-body">
+          <h5><span class="label label-primary">Answer</span></h5>
+          <p>Menyerahkan buku dan kartu anggota kepada petugas untuk menghapus data peminjaman di sistem.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
